# Rover-Ackermann-ROS2-PX4

./: README.md  frames_2026-05-29_15.13.08.gv  run_all.sh  run_all_fullmap.sh  run_all_map_behaviors.sh
map PX4/: map1.sdf  nav_world.sdf  obstacle.sdf
results/: global_plan_20260617_160712.csv  global_plan_20260617_162540.csv  global_plan_20260617_163358.csv  global_plan_20260617_164124.csv  global_plan_20260625_101815.csv  global_plan_20260625_103257.csv  global_plan_20260625_201825.csv  trajectory_20260617_164124.csv  trajectory_20260625_101815.csv  trajectory_20260625_103257.csv  trajectory_20260625_201825.csv  velocity_20260617_164124.csv  velocity_20260625_101815.csv  velocity_20260625_103257.csv  velocity_20260625_201825.csv
src/ackermann_iot_bridge/: package.xml  setup.cfg  setup.py  walkthrough1.md
src/ackermann_iot_bridge/ackermann_iot_bridge/: system_health_node.py  telemetry_aggregator_node.py  transport_manager_node.py
src/ackermann_iot_bridge/ackermann_iot_bridge/plugins/: base_transport.py  lora_transport.py  mqtt_transport.py  sim_transport.py
src/ackermann_iot_bridge/launch/: iot_bridge.launch.py
src/ackermann_nav2_behaviors/: CMakeLists.txt  behavior_plugin.xml  package.xml
src/ackermann_nav2_behaviors/include/ackermann_nav2_behaviors/: ackermann_turnaround.hpp
src/ackermann_nav2_behaviors/src/: ackermann_turnaround.cpp
src/ackermann_rover_bringup/: CMakeLists.txt  package.xml
src/ackermann_rover_bringup/config/: ekf_global.yaml  ekf_local.yaml  fusion_params.yaml  gz_bridge.yaml  nav2_params.yaml  navigate_through_poses_w_replanning_and_recovery.xml  navigate_to_pose_w_replanning_and_recovery.xml  slam_toolbox.yaml
src/ackermann_rover_bringup/launch/: bringup.launch.py  localization.launch.py  mapping.launch.py  mapping_and_nav.launch.py  nav2.launch.py  perception.launch.py  pure_navigation.launch.py  rviz.launch.py  sensor_processing.launch.py  slam.launch.py
src/ackermann_rover_bringup/maps/: nav.pgm  nav.yaml  nav_world.data  route_graph.geojson
src/ackermann_rover_bringup/rviz/: rover_view.rviz
src/ackermann_rover_bringup/scripts/localization/: odom_to_tf.py
src/ackermann_rover_bringup/scripts/navigation/: collision_detector_node.py  nav2_px4_bridge.py  path_tracker.py  trajectory_recorder.py
src/ackermann_rover_bringup/scripts/sensor_fusion/: encoder_odom_node.py  semantic_fusion_node.py  sensor_preprocessor.py  yolo_detector_node.py
src/ackermann_rover_bringup/scripts/utils/: mission_manager.py  save_map.sh  save_posegraph.sh
src/ackermann_rover_bringup/urdf/: rover_ackermann.urdf
src/ackermann_rover_bringup/urdf/meshes/: rover_ackermann_base.dae  rover_ackermann_wheel.dae
src/ackermann_rover_msgs/: CMakeLists.txt  package.xml
src/ackermann_rover_msgs/msg/: DownlinkCommand.msg  RobotState.msg  SemanticObstacle.msg  SemanticObstacleArray.msg  SystemHealth.msg  Telemetry.msg
