<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ackermann_nav2_behaviors</name>
  <version>0.0.0</version>
  <description>Custom Nav2 recovery behaviors cho xe Ackermann</description>
  <maintainer email="tinvo@todo.todo">tinvo</maintainer>  
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend> 
  <depend>nav2_core</depend>
  <depend>nav2_behaviors</depend>
  <depend>nav2_msgs</depend>
  <depend>pluginlib</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>nav2_util</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <nav2_core plugin="${prefix}/behavior_plugin.xml" />
  </export>
</package>
